--- a/SinpleDemo/appsettings.json
+++ b/SinpleDemo/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SimpleDemoContext": "Server=(localdb)\\mssqllocaldb;Database=SimpleDemoContext-2c707025-315d-4597-97a4-9018b3f7f7b3;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
